--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <meta charset="utf-8">
     </head>
     <body>
+    <h1>sss</h1>
+        <script src="http://localhost:8080/webpack-dev-derver.js"></script>
         <script type="text/javascript" src="./build/bundle.js" charset="utf-8"></script>
     </body>
 </html>
