--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 </head>
   <body>
     <header>
-      <nav class="website-nav">
+      <img class="logo col-md-6" src="./img/newLogo.svg" alt="Mountain View">
+      <nav class="website-nav col-md-6">
         <ul>
           <li><a href="about.html">品牌故事</a></li>
           <li><a href="product.html">產品介紹</a></li>
@@ -21,8 +22,6 @@
 
     <div class="content">
       <div class="text">
-        <h1>Congratulations!</h1>
-        <h2>You just hosted a website on AWS.</h2>
       </div>
     </div>
 
