--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,20 @@
 </head>
   <body>
     <header>
-      <img class="logo col-md-6" src="./img/newLogo.svg" alt="Mountain View">
-      <nav class="website-nav col-md-6">
-        <ul>
-          <li><a href="about.html">品牌故事</a></li>
-          <li><a href="product.html">產品介紹</a></li>
-          <li><a href="shopping.html">購物中心</a></li>
-          <li><a href="contact.html">聯絡我們</a></li>
-        </ul>
-      </nav>
+      <div class="hearderFrame">
+        <img class="logo" src="./img/newLogo.svg" alt="Mountain View">
+        <nav class="website-nav">
+          <ul>
+            <li><a href="about.html">品牌故事</a></li>
+            <li><a href="product.html">產品介紹</a></li>
+            <li><a href="shopping.html">購物中心</a></li>
+            <li><a href="contact.html">聯絡我們</a></li>
+          </ul>
+        </nav>
+      </div>
+      <img class="headerImg" src="./img/header.png">
     </header>
+
 
     <div class="content">
       <div class="text">
