--- a/src/index.html
+++ b/src/index.html
@@ -10,23 +10,48 @@
   <body>
     <header>
       <div class="hearderFrame">
-        <img class="logo" src="./img/newLogo.svg" alt="Mountain View">
-        <nav class="website-nav">
-          <ul>
-            <li><a href="about.html">品牌故事</a></li>
-            <li><a href="product.html">產品介紹</a></li>
-            <li><a href="shopping.html">購物中心</a></li>
-            <li><a href="contact.html">聯絡我們</a></li>
-          </ul>
-        </nav>
+        <img class="logo" src="./img/newLogo.svg" alt="Mountain View" title="千金醇－滴雞精">
+        <div class="navFrame">
+          <nav class="website-nav">
+            <ul>
+              <li><a href="about.html">品牌故事</a></li>
+              <li><a href="product.html">產品介紹</a></li>
+              <li><a href="shopping.html">購物中心</a></li>
+              <li><a href="contact.html">聯絡我們</a></li>
+            </ul>
+          </nav>
+          <a href="https://www.facebook.com/%E5%8D%83%E9%87%91%E9%86%87-237241953387403/">
+            <img class="fbIcon" src="./img/fbIcon.png" title="千金醇－滴雞精，FB粉絲團">
+          </a>
+        </div>
       </div>
+
       <img class="headerImg" src="./img/header.png">
     </header>
 
 
     <div class="content">
-      <div class="text">
+      <h3>一碗來自母親對女兒疼愛所釀造出來的好味道</h3>
+    </div>
+    <div id="myCarousel" class="carousel slide carouselFrame">
+      <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+      </ol>
+      <div class="carousel-inner carouselImage">
+          <div class="item active ">
+              <img src="./img/ad1.png" alt="First slide">
+          </div>
+          <div class="item">
+              <img src="./img/ad2.png" alt="Second slide">
+          </div>
       </div>
+      <a class="carousel-control left carouselArrow" href="#myCarousel" 
+          data-slide="prev">&lsaquo;
+      </a>
+      <a class="carousel-control right carouselArrow" href="#myCarousel" 
+          data-slide="next">&rsaquo;
+      </a>
     </div>
 
     <footer>
