--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
 
     <div class="content">
-      <h3>一碗來自母親對女兒疼愛所釀造出來的好味道</h3>
+      <h3>一碗來自母親對女兒疼愛，所釀造出來的好味道</h3>
     </div>
     <div id="myCarousel" class="carousel slide carouselFrame">
       <ol class="carousel-indicators">
@@ -55,6 +55,15 @@
     </div>
 
     <footer>
+      <h4>誥豐國際貿易有限公司</h4>
+      <div class="footerText">
+        <div>電話：04 - 26867820</div>
+        <div>傳真：04 - 26867770</div>
+        <div>統編：60270885</div>
+        <div>Email：Kaofong@outlook.com</div>        
+        <div>門市地址：台中市大甲區仁愛街157號</div>
+      </div>
+
     </footer>
 
     <script src="js/set-background.js"></script>
