--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,14 @@
   <body>
     <header>
       <div class="hearderFrame">
-        <img class="logo" src="./img/newLogo.svg" alt="Mountain View" title="千金醇－滴雞精">
+        <a href="index.html">
+          <img class="logo" src="./img/newLogo.svg" alt="Mountain View" title="千金醇醇金醇－滴雞精">
+        </a>
         <div class="navFrame">
           <nav class="website-nav">
             <ul>
-              <li><a href="about.html">品牌故事</a></li>
+              <li><a href="index.html">回首頁</a></li>
+              <li><a href="about.html">關於我們</a></li>
               <li><a href="product.html">產品介紹</a></li>
               <li><a href="shopping.html">購物中心</a></li>
               <li><a href="contact.html">聯絡我們</a></li>
@@ -26,12 +29,27 @@
         </div>
       </div>
 
-      <img class="headerImg" src="./img/header.png">
+      <img class="headerImg" src="./img/header2.png">
     </header>
 
 
     <div class="content">
       <h3>一碗來自母親對女兒疼愛，所釀造出來的好味道</h3>
+      <div class="homeIntroduction">
+        <img src="./img/product_1.png" alt="SGS，食品認證"/>
+        <div style="height: 4px; width: 60%; background-color: #d1a417; display: inline-block;"></div>
+        <div style="display: inline-block; font-size: 18px; margin: 10px 0px;">千金醇堅持，每批滴雞精原料都必須檢驗合格</div>
+      </div>
+      <div class="homeIntroduction">
+        <img src="./img/product_2.png" alt="黑羽土公雞"/>
+        <div style="height: 4px; width: 60%; background-color: #d1a417; display: inline-block;"></div>
+        <div style="display: inline-block; font-size: 18px; margin: 10px 0px;">黑羽土公雞，不施打抗生素及生長激素</div>
+      </div>
+      <div class="homeIntroduction">
+        <img src="./img/product_3.png" alt="慢火蒸煮的滴雞精"/>
+        <div style="height: 4px; width: 60%; background-color: #d1a417; display: inline-block;"></div>
+        <div style="display: inline-block; font-size: 18px; margin: 10px 0px;">慢火蒸煮，遵循古法不添加化學物質</div>
+      </div>
     </div>
     <div id="myCarousel" class="carousel slide carouselFrame">
       <ol class="carousel-indicators">
