--- a/src/about.html
+++ b/src/about.html
@@ -2,51 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Example app</title>
-  <meta name="description" content=""/>
+  <title>千金醇 － 關於我們，品牌介紹</title>
+  <meta name="description" content="優質滴雞精，給家人最好的選擇－千金醇"/>
   <link href="css/styles.css" rel="stylesheet">
-  <link href="css/gradients.css" rel="stylesheet">
+  <link href="css/bootstrap.css" rel="stylesheet">
 </head>
-<body>
-  <div class="wrapper">
+  <body>
     <header>
-      <nav class="website-nav">
-        <ul>
-          <li><a class="home-link" href="index.html">Lorem ipsum</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="hearderFrame">
+        <a href="index.html">
+          <img class="logo" src="./img/newLogo.svg" alt="Mountain View" title="千金醇醇金醇－滴雞精">
+        </a>
+        <div class="navFrame">
+          <nav class="website-nav">
+            <ul>
+              <li><a href="index.html">回首頁</a></li>
+              <li><a href="about.html">關於我們</a></li>
+              <li><a href="product.html">產品介紹</a></li>
+              <li><a href="shopping.html">購物中心</a></li>
+              <li><a href="contact.html">聯絡我們</a></li>
+            </ul>
+          </nav>
+          <a href="https://www.facebook.com/%E5%8D%83%E9%87%91%E9%86%87-237241953387403/">
+            <img class="fbIcon" src="./img/fbIcon.png" title="千金醇－滴雞精，FB粉絲團">
+          </a>
+        </div>
+      </div>
+
+      <img class="headerImg" src="./img/header2.png">
     </header>
-    <section class="page-content">
-      <article>
-        <h1>Lorem ipsum dolor sit amet</h1>
-        <p>Lorem ipsum dolor sit amet, no duo altera ornatus, omittam postulant mea ea. In eius nobis quaerendum nec, est saepe deserunt percipitur ei. Stet accusam consequuntur te eam, posse discere vix ex. Per ne accusam molestie.</p>
 
-        <h2>Docendi conclusionemque in duo</h2>
-        <p>Docendi conclusionemque in duo, te qui persequeris definitiones. In has tollit rationibus complectitur. Cu eligendi aliquando qui, sea mentitum interpretaris ea. Veritus pertinax nam ei. Cum essent maiestatis at, eu mundi tempor blandit qui.</p>
 
-        <p>Modo quando consequat mel at. Ne per omnesque torquatos, his partiendo petentium cu. Ei possit mentitum consectetuer usu, ne aliquip laoreet eam, agam possit qui ei. Vis augue imperdiet eu, an sed electram urbanitas. Cu moderatius neglegentur mel, debitis tacimates an has. Cu nam vide malis, quas elaboraret omittantur ex quo.</p>
-
-        <p>Pri epicurei indoctum scripserit eu, nonumy consetetur at eos. Ut disputando disputationi vim. Per an utinam adipisci tractatos. Suas verterem ne duo. Eos cu tritani oporteat, suscipit facilisi moderatius ius in, audire denique has ex. Cum modus errem elitr ad. Graece causae impedit pri cu, ei alia soleat corpora eum.</p>
-
-        <p>Utroque adipisci adipiscing eu mea. At movet scripserit pri. Te modus menandri pro, mazim ancillae posidonium nam in, vix mutat civibus consulatu ex. Quis alienum vix ei, his omnium civibus oportere cu. Facer erant eu sit, at nam denique omnesque.</p>
-
-      </article>
-    </section>
-    <div class="push"></div>
-
-  </div>
-  <footer>
-    <p class="footer-contents">Designed and developed with
-      <a href="https://www.amazon.jobs/en/search?base_query=&offset=0&location%5B%5D=berlin-germany">
-        ♥
+    <div class="content">
+      <h3>一碗來自母親對女兒疼愛，所釀造出來的好味道</h3>
+      <div class="homeIntroduction">
+        <img src="./img/product_1.png" alt="SGS，食品認證"/>
+        <div style="height: 4px; width: 60%; background-color: #d1a417; display: inline-block;"></div>
+        <div style="display: inline-block; font-size: 18px; margin: 10px 0px;">千金醇堅持，每批滴雞精原料都必須檢驗合格</div>
+      </div>
+      <div class="homeIntroduction">
+        <img src="./img/product_2.png" alt="黑羽土公雞"/>
+        <div style="height: 4px; width: 60%; background-color: #d1a417; display: inline-block;"></div>
+        <div style="display: inline-block; font-size: 18px; margin: 10px 0px;">黑羽土公雞，不施打抗生素及生長激素</div>
+      </div>
+      <div class="homeIntroduction">
+        <img src="./img/product_3.png" alt="慢火蒸煮的滴雞精"/>
+        <div style="height: 4px; width: 60%; background-color: #d1a417; display: inline-block;"></div>
+        <div style="display: inline-block; font-size: 18px; margin: 10px 0px;">慢火蒸煮，遵循古法不添加化學物質</div>
+      </div>
+    </div>
+    <div id="myCarousel" class="carousel slide carouselFrame">
+      <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+      </ol>
+      <div class="carousel-inner carouselImage">
+          <div class="item active ">
+              <img src="./img/ad1.png" alt="First slide">
+          </div>
+          <div class="item">
+              <img src="./img/ad2.png" alt="Second slide">
+          </div>
+      </div>
+      <a class="carousel-control left carouselArrow" href="#myCarousel" 
+          data-slide="prev">&lsaquo;
       </a>
-      in Berlin.
-    </p>
-  </footer>
+      <a class="carousel-control right carouselArrow" href="#myCarousel" 
+          data-slide="next">&rsaquo;
+      </a>
+    </div>
 
-  <script src="js/set-background.js"></script>
-</body>
+    <footer>
+      <h4>誥豐國際貿易有限公司</h4>
+      <div class="footerText">
+        <div>電話：04 - 26867820</div>
+        <div>傳真：04 - 26867770</div>
+        <div>統編：60270885</div>
+        <div>Email：Kaofong@outlook.com</div>        
+        <div>門市地址：台中市大甲區仁愛街157號</div>
+      </div>
+
+    </footer>
+
+    <script src="js/set-background.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js""></script>
+  </body>
 </html>
