--- a/src/product.html
+++ b/src/product.html
@@ -2,51 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Example app</title>
-  <meta name="description" content=""/>
+  <title>千金醇 － 滴雞精產品介紹</title>
+  <meta name="description" content="優質滴雞精，給家人最好的選擇－千金醇"/>
   <link href="css/styles.css" rel="stylesheet">
-  <link href="css/gradients.css" rel="stylesheet">
+  <link href="css/bootstrap.css" rel="stylesheet">
 </head>
-<body>
-  <div class="wrapper">
+  <body>
     <header>
-      <nav class="website-nav">
-        <ul>
-          <li><a class="home-link" href="index.html">Lorem ipsum</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+      <div class="hearderFrame">
+        <a href="index.html">
+          <img class="logo" src="./img/newLogo.svg" alt="Mountain View" title="千金醇醇金醇－滴雞精">
+        </a>
+        <div class="navFrame">
+          <nav class="website-nav">
+            <ul>
+              <li><a href="index.html">回首頁</a></li>
+              <li><a href="about.html">關於我們</a></li>
+              <li><a href="product.html">產品介紹</a></li>
+              <li><a href="shopping.html">購物中心</a></li>
+              <li><a href="contact.html">聯絡我們</a></li>
+            </ul>
+          </nav>
+          <a href="https://www.facebook.com/%E5%8D%83%E9%87%91%E9%86%87-237241953387403/">
+            <img class="fbIcon" src="./img/fbIcon.png" title="千金醇－滴雞精，FB粉絲團">
+          </a>
+        </div>
+      </div>
+
+      <img class="headerImg" src="./img/header2.png">
     </header>
 
-    <section class="page-content">
-      <article>
-        <h1>Aenean tincidunt luctus quam ut scelerisque</h1>
 
-        <p>Aenean tincidunt luctus quam ut scelerisque. Donec elementum felis fermentum aliquet elementum. Vestibulum quis sodales ante, vitae ullamcorper odio. Proin venenatis justo sapien, quis cursus libero interdum sed. Vivamus pretium enim vitae orci hendrerit, non viverra metus porta. Suspendisse leo mauris, rutrum quis tempus vitae, ullamcorper ut nunc. Maecenas efficitur justo ut ornare volutpat. Pellentesque congue libero vitae efficitur egestas. Etiam interdum ante id arcu vestibulum, a rhoncus ante pulvinar. In eget suscipit eros.</p>
-
-        <p>Duis ut aliquet ante. Nullam id turpis id dolor condimentum condimentum. Donec gravida augue orci, molestie finibus libero malesuada id. Nunc sit amet lorem metus. Nullam id elementum turpis. Sed condimentum imperdiet elit eget pharetra. Nulla turpis turpis, tristique sed nisi sed, iaculis vulputate velit. Proin mauris orci, mollis a sapien sed, euismod sodales mi. Mauris nibh sapien, blandit nec turpis consequat, egestas commodo lectus. Sed ac ex felis. Suspendisse quam ligula, ornare at sapien id, consectetur volutpat lectus.</p>
-
-        <p>Praesent vel dui quis diam sagittis mattis. Curabitur turpis augue, imperdiet non tempor a, iaculis suscipit purus. Phasellus sed est orci. Sed a turpis varius, aliquam turpis quis, sollicitudin libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque enim diam, porttitor non molestie vel, tincidunt in turpis. Phasellus semper, orci non egestas ornare, odio sem scelerisque tellus, pellentesque pulvinar lorem arcu et enim. In at dapibus nulla. Donec quis laoreet lorem. Donec lorem turpis, scelerisque condimentum varius a, lobortis a augue. Donec sit amet arcu in enim imperdiet mattis quis vitae massa. Integer odio nisl, tempus et lectus a, sagittis tincidunt sapien.</p>
-
-        <p>Vivamus semper ut nisi at varius. Aliquam finibus enim sollicitudin, vehicula mauris a, tempus ipsum. Donec at lobortis nibh. Aliquam sed eros placerat, vehicula nunc et, faucibus elit. Fusce tempus sit amet odio sed dignissim. Ut sed ipsum lorem. Ut fringilla mauris a sagittis lobortis. Nunc commodo non dolor ultricies cursus. Proin pulvinar aliquam lorem sit amet finibus. Morbi eleifend semper urna, ac eleifend dui consectetur vel. Curabitur sit amet massa nulla. Curabitur malesuada sollicitudin rhoncus. In ut mi maximus, tincidunt lorem et, imperdiet tortor. In accumsan risus vel mattis tristique. Quisque lacinia sapien et ligula pellentesque tincidunt. Aliquam accumsan euismod cursus.</p>
-
-        <p>Aliquam placerat tellus at massa iaculis placerat. Integer tempor nunc at nulla convallis, id ornare ex volutpat. Proin condimentum eleifend nisi, et pellentesque nisl mollis et. Aenean pulvinar odio nec erat euismod lobortis. Suspendisse sit amet ex efficitur, suscipit nulla non, congue felis. Donec tempor, arcu non ullamcorper sagittis, leo dui pretium elit, in tincidunt augue quam nec ligula. Proin ullamcorper tincidunt turpis id facilisis. Nunc consectetur arcu auctor accumsan rutrum. Nullam luctus faucibus nibh, vel hendrerit purus vestibulum sed. Nulla facilisi. Nullam elit sem, facilisis quis cursus malesuada, convallis vitae nunc. Pellentesque tristique rutrum sapien, ac facilisis libero commodo lacinia. Donec aliquam blandit leo, eu dignissim dolor placerat sit amet. Vivamus fringilla magna nisi. Nam id libero vestibulum, pretium nunc vel, scelerisque sem.</p>
-      </article>
-    </section>
-    <div class="push"></div>
-  </div>
-
-  <footer>
-    <p class="footer-contents">Designed and developed with
-      <a href="https://www.amazon.jobs/en/search?base_query=&offset=0&location%5B%5D=berlin-germany">
-        ♥
+    <div class="content">
+      <h3>一碗來自母親對女兒疼愛，所釀造出來的好味道</h3>
+      <div class="homeIntroduction">
+        <img src="./img/product_1.png" alt="SGS，食品認證"/>
+        <div style="height: 4px; width: 60%; background-color: #d1a417; display: inline-block;"></div>
+        <div style="display: inline-block; font-size: 18px; margin: 10px 0px;">千金醇堅持，每批滴雞精原料都必須檢驗合格</div>
+      </div>
+      <div class="homeIntroduction">
+        <img src="./img/product_2.png" alt="黑羽土公雞"/>
+        <div style="height: 4px; width: 60%; background-color: #d1a417; display: inline-block;"></div>
+        <div style="display: inline-block; font-size: 18px; margin: 10px 0px;">黑羽土公雞，不施打抗生素及生長激素</div>
+      </div>
+      <div class="homeIntroduction">
+        <img src="./img/product_3.png" alt="慢火蒸煮的滴雞精"/>
+        <div style="height: 4px; width: 60%; background-color: #d1a417; display: inline-block;"></div>
+        <div style="display: inline-block; font-size: 18px; margin: 10px 0px;">慢火蒸煮，遵循古法不添加化學物質</div>
+      </div>
+    </div>
+    <div id="myCarousel" class="carousel slide carouselFrame">
+      <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+      </ol>
+      <div class="carousel-inner carouselImage">
+          <div class="item active ">
+              <img src="./img/ad1.png" alt="First slide">
+          </div>
+          <div class="item">
+              <img src="./img/ad2.png" alt="Second slide">
+          </div>
+      </div>
+      <a class="carousel-control left carouselArrow" href="#myCarousel" 
+          data-slide="prev">&lsaquo;
       </a>
-      in Berlin.
-    </p>
-  </footer>
+      <a class="carousel-control right carouselArrow" href="#myCarousel" 
+          data-slide="next">&rsaquo;
+      </a>
+    </div>
 
-  <script src="js/set-background.js"></script>
-</body>
+    <footer>
+      <h4>誥豐國際貿易有限公司</h4>
+      <div class="footerText">
+        <div>電話：04 - 26867820</div>
+        <div>傳真：04 - 26867770</div>
+        <div>統編：60270885</div>
+        <div>Email：Kaofong@outlook.com</div>        
+        <div>門市地址：台中市大甲區仁愛街157號</div>
+      </div>
+
+    </footer>
+
+    <script src="js/set-background.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js""></script>
+  </body>
 </html>
