--- a/src/index.html
+++ b/src/index.html
@@ -73,28 +73,19 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <img src="./img/product_1.png" alt="SGS，食品認證"/>
+                    <h4 class="service-heading">食品認證</h4>
+                    <p class="text-muted">每批滴雞精原料都必須檢驗合格，且飼養的過程不施打抗生素及生長激素。</p>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <img src="./img/product_2.png" alt="黑羽土公雞"/>
+                    <h4 class="service-heading">黑羽土公雞</h4>
+                    <p class="text-muted">我們在屏東潮州、台南新化一帶，以契養和半圈養的方式，請專業農場飼養黑羽土雞；嚴選適齡的黑羽土公雞，其肉質結實、含有豐富得蛋白質跟多種氨基酸，最適合淬煉滴雞精。</p>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <img src="./img/product_3.png" alt="慢火蒸煮的滴雞精"/>
+                    <h4 class="service-heading">慢火蒸煮</h4>
+                    <p class="text-muted">採用小鍋爐熬煮，每個鍋爐只放5隻雞，經慢火熬煮10小時，適當控制火侯大小，才能淬煉出優質的滴雞精。</p>
                 </div>
             </div>
         </div>
@@ -104,8 +95,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">熱銷商品</h2>
+                    <h3 class="section-subheading text-muted">限時優惠</h3>
                 </div>
             </div>
             <div class="row">
@@ -411,31 +402,15 @@
         </div>
     </section>
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2016</span>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+      <h4>誥豐國際貿易有限公司</h4>
+      <div class="footerText">
+        <div>電話：04 - 26867820</div>
+        <div>傳真：04 - 26867770</div>
+        <div>統編：60270885</div>
+        <div>Email：Kaofong@outlook.com</div>        
+        <div>門市地址：台中市大甲區仁愛街157號</div>
+      </div>
+
     </footer>
     <!-- Portfolio Modals -->
     <!-- Use the modals below to showcase details about your portfolio projects! -->
