--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a href="#page-top">
+                <a href="#page-top" style="display: inline-block;">
                   <div class="navbar-brand page-scroll" >
                   </div>
                 </a>
@@ -58,7 +58,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-              <img src="./img/headerText.png" title="滴雞精">
+              <!-- <img src="./img/headerText.png" title="滴雞精"> -->
             </div>
         </div>
     </header>
