--- a/src/shopping.html
+++ b/src/shopping.html
@@ -59,64 +59,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
-              <!-- <img src="./img/headerText.png" title="滴雞精"> -->
+              <img class="underImg" src="./img/global/under.png" title="網站建置中">
             </div>
         </div>
     </header>
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">聯絡我們</h2>
-                    <h3 class="section-subheading text-muted">Contact Us</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="姓名" id="name" required data-validation-required-message="請輸入姓名">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="請輸入E-mail信箱">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="電話" id="phone" required data-validation-required-message="請輸入電話號碼">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" placeholder="訊息" id="message" required data-validation-required-message="請輸入訊息"></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">送出</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer>
-      <h4>誥豐國際貿易有限公司</h4>
-      <div class="footerText">
-        <div>電話：04 - 26867820</div>
-        <div>傳真：04 - 26867770</div>
-        <div>統編：60270885</div>
-        <div>Email：Kaofong@outlook.com</div>        
-        <div>門市地址：台中市大甲區仁愛街157號</div>
-      </div>
-    </footer>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
