--- a/src/about.html
+++ b/src/about.html
@@ -60,11 +60,12 @@
         <div class="container">
             <div class="intro-text">
               <!-- <img src="./img/headerText.png" title="滴雞精"> -->
+              <img class="underImg" src="./img/global/under.png" title="網站建置中">
             </div>
         </div>
     </header>
     <!-- About Section -->
-    <section id="about">
+    <!-- <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -143,7 +144,6 @@
             </div>
         </div>
     </section>
-    <!-- Team Section -->
     <section id="team" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -205,8 +205,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <footer>
+    </section> -->
+    <!-- <footer>
       <h4>誥豐國際貿易有限公司</h4>
       <div class="footerText">
         <div>電話：04 - 26867820</div>
@@ -215,8 +215,7 @@
         <div>Email：Kaofong@outlook.com</div>        
         <div>門市地址：台中市大甲區仁愛街157號</div>
       </div>
-
-    </footer>
+    </footer> -->
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
