--- a/src/product.html
+++ b/src/product.html
@@ -80,11 +80,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img src="img/product/ad1_preview.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <h4>千金純滴雞精20入</h4>
+                        <p class="text-muted">▼95折▼千金醇滴雞精20入(65ml/入)</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -94,11 +94,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
+                        <img src="img/product/ad2_preview.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Startup Framework</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>千金純滴雞精10入</h4>
+                        <p class="text-muted">▼95折▼千金醇滴雞精10入(65ml/入)</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -108,11 +108,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/product/ad1_preview.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Treehouse</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>千金純滴雞精20入</h4>
+                        <p class="text-muted">▼95折▼千金醇滴雞精20入(65ml/入)</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -122,11 +122,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
+                        <img src="img/product/ad2_preview.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Golden</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>千金純滴雞精20入</h4>
+                        <p class="text-muted">▼95折▼千金醇滴雞精20入(65ml/入)</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -136,11 +136,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/escape.png" class="img-responsive" alt="">
+                        <img src="img/product/ad1_preview.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Escape</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>千金純滴雞精20入</h4>
+                        <p class="text-muted">▼95折▼千金醇滴雞精20入(65ml/入)</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -150,18 +150,18 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
+                        <img src="img/product/ad2_preview.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Dreams</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>千金純滴雞精20入</h4>
+                        <p class="text-muted">▼95折▼千金醇滴雞精20入(65ml/入)</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
+    <!-- <section id="team" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -222,7 +222,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <footer>
       <h4>誥豐國際貿易有限公司</h4>
       <div class="footerText">
@@ -232,8 +232,207 @@
         <div>Email：Kaofong@outlook.com</div>        
         <div>門市地址：台中市大甲區仁愛街157號</div>
       </div>
-
     </footer>
+    <!-- Portfolio Modals -->
+    <!-- Use the modals below to showcase details about your portfolio projects! -->
+    <!-- Portfolio Modal 1 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>千金純滴雞精20入</h2>
+                                <p class="item-intro text-muted">▼95折▼千金醇滴雞精20入(65ml/入)</p>
+                                <img class="img-responsive img-centered" src="img/product/ad1.png" alt="">
+                                <div style="text-align: left;">
+                                  <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span><br />
+                                  <span>● 嚴選 100 天台灣原生黑羽土雞 ， 一隻雞只能滴出 2.5 包的滴雞精，封存滴滴精華。</span><br />
+                                  <span>●國際標準製程，生產系統通過 HACCP、ISO22000考核，並經中央畜產會、 SGS 品質檢驗認證 。</span><br />
+                                  <span>●富含 16 種胺基酸 、 膠原蛋白 。適合 病後體弱之恢復元氣 、 產後術後之調理養身 、 熬夜傷神之精力補給 、 成長發育之營養補充 。</span>
+                                  <span><br />
+                                </div>
+                                <button style="margin-top: 20px;" type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>關閉</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio Modal 2 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>千金純滴雞精20入</h2>
+                                <p class="item-intro text-muted">▼95折▼千金醇滴雞精20入(65ml/入)</p>
+                                <img class="img-responsive img-centered" src="img/product/ad2.png" alt="">
+                                <div style="text-align: left;">
+                                  <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span><br />
+                                  <span>● 嚴選 100 天台灣原生黑羽土雞 ， 一隻雞只能滴出 2.5 包的滴雞精，封存滴滴精華。</span><br />
+                                  <span>●國際標準製程，生產系統通過 HACCP、ISO22000考核，並經中央畜產會、 SGS 品質檢驗認證 。</span><br />
+                                  <span>●富含 16 種胺基酸 、 膠原蛋白 。適合 病後體弱之恢復元氣 、 產後術後之調理養身 、 熬夜傷神之精力補給 、 成長發育之營養補充 。</span>
+                                  <span><br />
+                                </div>
+                                <button style="margin-top: 20px;" type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>關閉</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio Modal 3 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>千金純滴雞精20入</h2>
+                                <p class="item-intro text-muted">▼95折▼千金醇滴雞精20入(65ml/入)</p>
+                                <img class="img-responsive img-centered" src="img/product/ad1.png" alt="">
+                                <div style="text-align: left;">
+                                  <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span><br />
+                                  <span>● 嚴選 100 天台灣原生黑羽土雞 ， 一隻雞只能滴出 2.5 包的滴雞精，封存滴滴精華。</span><br />
+                                  <span>●國際標準製程，生產系統通過 HACCP、ISO22000考核，並經中央畜產會、 SGS 品質檢驗認證 。</span><br />
+                                  <span>●富含 16 種胺基酸 、 膠原蛋白 。適合 病後體弱之恢復元氣 、 產後術後之調理養身 、 熬夜傷神之精力補給 、 成長發育之營養補充 。</span>
+                                  <span><br />
+                                </div>
+                                <button style="margin-top: 20px;" type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>關閉</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio Modal 4 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>千金純滴雞精20入</h2>
+                                <p class="item-intro text-muted">▼95折▼千金醇滴雞精20入(65ml/入)</p>
+                                <img class="img-responsive img-centered" src="img/product/ad2.png" alt="">
+                                <div style="text-align: left;">
+                                  <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span><br />
+                                  <span>● 嚴選 100 天台灣原生黑羽土雞 ， 一隻雞只能滴出 2.5 包的滴雞精，封存滴滴精華。</span><br />
+                                  <span>●國際標準製程，生產系統通過 HACCP、ISO22000考核，並經中央畜產會、 SGS 品質檢驗認證 。</span><br />
+                                  <span>●富含 16 種胺基酸 、 膠原蛋白 。適合 病後體弱之恢復元氣 、 產後術後之調理養身 、 熬夜傷神之精力補給 、 成長發育之營養補充 。</span>
+                                  <span><br />
+                                </div>
+                                <button style="margin-top: 20px;" type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>關閉</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio Modal 5 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>千金純滴雞精20入</h2>
+                                <p class="item-intro text-muted">▼95折▼千金醇滴雞精20入(65ml/入)</p>
+                                <img class="img-responsive img-centered" src="img/product/ad1.png" alt="">
+                                <div style="text-align: left;">
+                                  <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span><br />
+                                  <span>● 嚴選 100 天台灣原生黑羽土雞 ， 一隻雞只能滴出 2.5 包的滴雞精，封存滴滴精華。</span><br />
+                                  <span>●國際標準製程，生產系統通過 HACCP、ISO22000考核，並經中央畜產會、 SGS 品質檢驗認證 。</span><br />
+                                  <span>●富含 16 種胺基酸 、 膠原蛋白 。適合 病後體弱之恢復元氣 、 產後術後之調理養身 、 熬夜傷神之精力補給 、 成長發育之營養補充 。</span>
+                                  <span><br />
+                                </div>
+                                <button style="margin-top: 20px;" type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>關閉</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio Modal 6 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>千金純滴雞精20入</h2>
+                                <p class="item-intro text-muted">▼95折▼千金醇滴雞精20入(65ml/入)</p>
+                                <img class="img-responsive img-centered" src="img/product/ad2.png" alt="">
+                                <div style="text-align: left;">
+                                  <span>● 傳承老祖宗百年智慧，遵循古法再升級。 獨特的蒸氣不回流、油脂分離技術 ，保存滴雞精的精純與甘醇。</span><br />
+                                  <span>● 嚴選 100 天台灣原生黑羽土雞 ， 一隻雞只能滴出 2.5 包的滴雞精，封存滴滴精華。</span><br />
+                                  <span>●國際標準製程，生產系統通過 HACCP、ISO22000考核，並經中央畜產會、 SGS 品質檢驗認證 。</span><br />
+                                  <span>●富含 16 種胺基酸 、 膠原蛋白 。適合 病後體弱之恢復元氣 、 產後術後之調理養身 、 熬夜傷神之精力補給 、 成長發育之營養補充 。</span>
+                                  <span><br />
+                                </div>
+                                <button style="margin-top: 20px;" type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>關閉</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
