--- a/src/about.html
+++ b/src/about.html
@@ -60,17 +60,24 @@
         <div class="container">
             <div class="intro-text">
               <!-- <img src="./img/headerText.png" title="滴雞精"> -->
-              <img class="underImg" src="./img/global/under.png" title="網站建置中">
+              <!-- <img class="underImg" src="./img/global/under.png" title="網站建置中"> -->
             </div>
         </div>
     </header>
     <!-- About Section -->
-    <!-- <section id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">以古法煉製滴出千金醇滴雞精</h2>
+                        <h3 class="section-subheading text-muted">總記得小時候家裡魚池旁飼養的土雞，父母親總是要花4至6個月的時間，每天細心的照顧，
+                        土雞固定時間放山運動到雞舍清洗餵食，目的就是為了給孩子們準備一碗濃純香能補充元氣
+                        ，增強免疫力的滴雞精。從小到大，走進廚房，總能看到爸媽正辛苦的為家中孩子們準備滴雞精，每一滴的滴雞精，都猶如父母親對孩子的愛，就像千金般的珍貴，於是我們將這份父母親疼惜孩子的滴雞精取名為千金醇，讓這一份愛延續擴散到每個家庭。
+                    </h3>
+                    <h3 class="section-subheading text-muted">
+                        我們嚴選飼養4至6個月的土公雞，以古法淬煉的技術，經隔水加熱的方式，需6~7小時的時
+                        間來淬煉雞精，所淬煉出來的滴雞精，每一滴都是精華。
+                    </h3>
                 </div>
             </div>
             <div class="row">
@@ -78,25 +85,23 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/new1.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4 class="subheading">嚴選淬煉食材黑羽土公雞</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">嚴選食材是千金醇的原則，我們在屏東潮州，台南新化一帶，以契養和半圈養的方式，請專業農場飼養黑羽土雞，飼養過程不施打抗生素及生長激素。嚴格選用適週齡的黑羽土公雞，其肉質結實且油脂較少，母雞則油脂較多，最重要的是黑羽土公雞含有豐富的蛋白質跟多種胺基酸，最適合淬煉滴雞精。</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/new2.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
                                     <h4 class="subheading">An Agency is Born</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -106,29 +111,27 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/new3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4 class="subheading">製作工法嚴謹不含化學添加物</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">黑羽土雞經由清理內臟、去皮等過程，以減少油脂量並採用小爐熬煮，每個鍋爐只放5隻雞，不大量製作，經慢火10小時的淬煉，不添加任何化學物質及香料，適當控制火侯大小，才能淬煉出優質的滴雞精。</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/new4.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4 class="subheading">不油不膩色澤金黃 滴滴香醇 營養滿分</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">每一滴雞精呈現最原始的金黃色澤，濃郁而不腥騷，是千金醇滴雞精最大的特色。千金醇滴雞精乃遵循古法慢火淬煉而來，純天然毫無添加物。千金醇滴雞精沒有傳統雞精的腥味，色澤金黃湯頭清澈，又雞湯香醇濃郁口感，不油不膩，滴滴香醇讓許多人一試便成主顧。</p>
                                 </div>
                             </div>
                         </li>
@@ -148,65 +151,47 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">哪些人適合飲用</h2>
+                    <h3 class="section-subheading text-muted">特別建議於早晨飲用，空腹時吸收效果更佳，讓一天都充滿活力！</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Kay Garland</h4>
-                        <p class="text-muted">Lead Designer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <h4>孩童</h4>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="team-member" style="display: ">
                         <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <h4>孕婦</h4>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <h4>銀髮族</h4>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                <div class="col-sm-6">
+                    <div class="team-member">
+                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
+                        <h4>營養補給</h4>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="team-member">
+                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
+                        <h4>上班族</h4>
+                    </div>
                 </div>
             </div>
         </div>
-    </section> -->
-    <!-- <footer>
+    </section>
+    <footer>
       <h4>誥豐國際貿易有限公司</h4>
       <div class="footerText">
         <div>電話：04 - 26867820</div>
@@ -215,7 +200,7 @@
         <div>Email：Kaofong@outlook.com</div>        
         <div>門市地址：台中市大甲區仁愛街157號</div>
       </div>
-    </footer> -->
+    </footer>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
