--- a/src/about.html
+++ b/src/about.html
@@ -75,7 +75,7 @@
                         ，增強免疫力的滴雞精。從小到大，走進廚房，總能看到爸媽正辛苦的為家中孩子們準備滴雞精，每一滴的滴雞精，都猶如父母親對孩子的愛，就像千金般的珍貴，於是我們將這份父母親疼惜孩子的滴雞精取名為千金醇，讓這一份愛延續擴散到每個家庭。
                     </h3>
                     <h3 class="section-subheading text-muted">
-                        我們嚴選飼養4至6個月的土公雞，以古法淬煉的技術，經隔水加熱的方式，需6~7小時的時
+                        我們嚴選飼養4至6個月的土公雞，以古法淬煉的技術，經隔水加熱的方式，需10小時的時
                         間來淬煉雞精，所淬煉出來的滴雞精，每一滴都是精華。
                     </h3>
                 </div>
@@ -89,10 +89,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">嚴選淬煉食材黑羽土公雞</h4>
+                                    <h4 class="subheading">契養</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">嚴選食材是千金醇的原則，我們在屏東潮州，台南新化一帶，以契養和半圈養的方式，請專業農場飼養黑羽土雞，飼養過程不施打抗生素及生長激素。嚴格選用適週齡的黑羽土公雞，其肉質結實且油脂較少，母雞則油脂較多，最重要的是黑羽土公雞含有豐富的蛋白質跟多種胺基酸，最適合淬煉滴雞精。</p>
+                                    <p class="text-muted">嚴選食材是千金醇的原則，我們在屏東潮州，台南新化一帶，以契養和半圈養的方式，請專業農場飼養黑羽土雞，飼養過程不施打抗生素及生長激素。</p>
                                 </div>
                             </div>
                         </li>
@@ -102,10 +102,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4 class="subheading">精心</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">黑羽土雞經由清理內臟、去皮等過程，以減少油脂量並採用小爐熬煮，每個鍋爐只放5隻雞，不大量製作。</p>
                                 </div>
                             </div>
                         </li>
@@ -115,10 +115,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">製作工法嚴謹不含化學添加物</h4>
+                                    <h4 class="subheading">淬煉</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">黑羽土雞經由清理內臟、去皮等過程，以減少油脂量並採用小爐熬煮，每個鍋爐只放5隻雞，不大量製作，經慢火10小時的淬煉，不添加任何化學物質及香料，適當控制火侯大小，才能淬煉出優質的滴雞精。</p>
+                                    <p class="text-muted">以古法淬煉的技術，經隔水加熱，經10小時的時間淬煉雞精，所淬煉出來的滴雞精，每一滴都是精華。
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -128,18 +129,16 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">不油不膩色澤金黃 滴滴香醇 營養滿分</h4>
+                                    <h4 class="subheading">滴滴香醇</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">每一滴雞精呈現最原始的金黃色澤，濃郁而不腥騷，是千金醇滴雞精最大的特色。千金醇滴雞精乃遵循古法慢火淬煉而來，純天然毫無添加物。千金醇滴雞精沒有傳統雞精的腥味，色澤金黃湯頭清澈，又雞湯香醇濃郁口感，不油不膩，滴滴香醇讓許多人一試便成主顧。</p>
+                                    <p class="text-muted">每一滴雞精呈現最原始的金黃色澤，濃郁而不腥騷，純天然毫無添加物。千金醇滴雞精沒有傳統雞精的腥味，色澤金黃湯頭清澈，又雞湯香醇濃郁口感，不油不膩，滴滴香醇讓許多人一試便成主顧。</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
+                            <div class="timeline-image" >
+                                <h4><br/>只給你最好的<br/></h4>
                             </div>
                         </li>
                     </ul>
@@ -158,19 +157,19 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/about/c1.png" class="img-responsive img-circle" alt="">
                         <h4>孩童</h4>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member" style="display: ">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
+                    <div class="team-member">
+                        <img src="img/about/c5.png" class="img-responsive img-circle" alt="">
                         <h4>孕婦</h4>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/about/c2.png" class="img-responsive img-circle" alt="">
                         <h4>銀髮族</h4>
                     </div>
                 </div>
@@ -178,13 +177,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/about/c4.png" class="img-responsive img-circle" alt="">
                         <h4>營養補給</h4>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/about/c3.png" class="img-responsive img-circle" alt="">
                         <h4>上班族</h4>
                     </div>
                 </div>
