--- a/src/product.html
+++ b/src/product.html
@@ -159,6 +159,7 @@
                 </div>
             </div>
         </div>
+        <img style="width: 100%; margin-top: 20px;"src="img/product/vs.png" alt="">
     </section>
     <!-- Team Section -->
     <!-- <section id="team" class="bg-light-gray">
