--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right" style="margin-top: 30px">
                     <li class="hidden"><a href="index.html">回首頁</a></li>
                     <li><a href="about.html" class="page-scroll">關於我們</a></li>
                     <li><a href="product.html" class="page-scroll">產品介紹</a></li>
@@ -194,7 +194,6 @@
             <div>傳真：04 - 26867770</div>
             <div>統編：60270885</div>
             <div>Email：Kaofong@outlook.com</div>
-            <div>門市地址：台中市大甲區仁愛街157號</div>
         </div>
     </footer>
     <!-- Portfolio Modals -->
