--- a/src/shopping.html
+++ b/src/shopping.html
@@ -42,7 +42,7 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right" style="margin-top: 30px">
                     <li class="hidden"><a href="index.html">回首頁</a></li>
                     <li><a href="index.html"  class="page-scroll">回首頁</a></li>
                     <li><a href="about.html"  class="page-scroll">關於我們</a></li>
