--- a/src/about.html
+++ b/src/about.html
@@ -190,6 +190,15 @@
             </div>
         </div>
     </section>
+    <div style="text-align: center;">
+        <div class="noticeFrame">
+            <div class="notice">注意事項</div>
+            <p>1.產品經解凍後請一次飲用完畢，勿再次冷藏或冷凍。</p>
+            <p>2.痛風、高血壓及腎臟病患者飲用前請先諮詢專業醫師。</p>
+            <p>3.患者及2歲以下嬰幼兒食用前請先諮詢專業醫師。</p>
+            <p>4.若發現產品有破損、軟袋鼓起或拆開後有異味時請勿飲用。</p>
+        </div>
+    </div>
     <footer>
       <h4>誥豐國際貿易有限公司</h4>
       <div class="footerText">
